# AutoTeam-F

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.fast  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
docs/: api.md  architecture.md  configuration.md  docker.md  getting-started.md  mail-provider-design.md  platform-signup-protocol.md  troubleshooting.md
prompts/0426/: synthesis.md
prompts/0515/: autoteam1-absorption-audit.md  free-registration-round2-critical-audit.md  implementation-plan.md  prd.md  research-docker-playwright-hardening.md  spec.md
src/autoteam/: _playwright_guard.py  account_ops.py  accounts.py  admin_state.py  api.py  chatgpt_api.py  chatgpt_transport.py  cliproxy_health.py  cloudmail.py  codex_auth.py  config.py  cpa_sync.py  display.py  identity.py  invite.py  manager.py  manual_account.py  master_health.py  oauth_workspace.py  playwright_lifecycle.py  playwright_probe.py  quota_predictor.py  register_failures.py  runtime_config.py  runtime_resources.py  setup_wizard.py  signup_profile.py  textio.py  workspace_pool.py
tests/integration/: test_docker_guard.py
tests/manual/: test_round10_dryrun.py
tests/static/: test_playwright_hygiene.py  test_playwright_hygiene_negative.py
tests/unit/: test_api_playwright_cleanup.py  test_api_status.py  test_chatgpt_transport.py  test_cliproxy_health.py  test_cmd_check_standby.py  test_free_registration_hardening.py  test_invite_blank_page_recovery.py  test_maillab.py  (+33 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js
(+100 files in other folders)
